fix: drag n drop on mobile devices

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
 }
 
 .slides {
+  touch-action: none;
   width: 10000px;
   height: 100%;
   position: relative;
